crates/qoo-tui/src/view/detail/snapshots/qoo_tui__view__detail__tests__detail_definition_config.snap
---
source: crates/qoo-tui/src/view/detail/tests.rs
expression: terminal.backend()
---
" 1:acme (2)                  ● running 1/3  ↯ claude  ↯ grok"
"╭📋 QUEUE── [r] [x]╮╭📄 DETAIL─────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (22, " ")]
"│ 🔍 [/]filter     ││ 1:prompt  2:config  3:discovery      │" Hidden by multi-width symbols: [(3, " ")]
"│ ⠯  topic=widg… ▲ ││                                      │"
"│ ○  topic=docs… █ ││  name              pr-ready       ▲  │"
"│ ──────── finis ▼ ││  description       —              █  │"
"╰──────────────────╯│  args              situation      █  │"
"╭⚡TASKS─── [r] [d]╮│  worktree          auto           █  │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter     ││  lane              —              █  │" Hidden by multi-width symbols: [(3, " ")]
"│ pr-ready         ││  dedup             none           █  │"
"╰──────────────────╯│  cron              —              ║  │"
"╭🌲 WORKTREES── [r]╮│  discovery         —              ║  │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter     ││  model             grok-4.5 → cla ║  │" Hidden by multi-width symbols: [(3, " ")]
"│ 2 feature        ││                    ude-opus-4.8   ▼  │"
"╰──────────────────╯╰──────────────────────────────────────╯"
"[1-9/0 · ctrl+s n/p]tab · [ctrl+x/z]sub-tab · [?]help · [q]u"
