crates/qoo-tui/src/view/detail/snapshots/qoo_tui__view__detail__tests__detail_run_info.snap
---
source: crates/qoo-tui/src/view/detail/tests.rs
expression: terminal.backend()
---
" 1:acme                                          ● running 0/3  ↯ claude  ↯ grok"
"╭📋 QUEUE─ [r] [x] [g] [a]╮╭📄 DETAIL──────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (29, " ")]
"│                         ││ 1:report  2:transcript  3:prompt  4:info          │"
"│ 🔍 [/]filter            ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│    Worktr…  Prompt/Args ││  Run                                           ▲  │"
"│ ●  feature  topic=widg… ││    id           01RUN                          █  │"
"│                         ││    definition   squash-merge                   █  │"
"│                         ││    status       done                           █  │"
"│                         ││    args         topic=widget-cache             █  │"
"│                         ││                                                █  │"
"│                         ││  Timing                                        █  │"
"│                         ││    created      07/09 07:00 (5m ago)           █  │"
"│                         ││    started      07/09 07:00 (4m ago)           █  │"
"│                         ││    finished     07/09 07:03 (1m ago)           █  │"
"│                         ││    duration     3m                             █  │"
"│                         ││                                                █  │"
"╰─────────────────────────╯│  Details                                       █  │"
"╭⚡TASKS [r] [d] [c] · [z]╮│    worktree     /repos/acme.feature            █  │" Hidden by multi-width symbols: [(2, " ")]
"│                         ││    session      sess-abc123                    █  │"
"│ 🔍 [/]filter            ││    model        claude-opus-4.8 (claude) · cla █  │" Hidden by multi-width symbols: [(3, " ")]
"│                         ││                 ude-opus-4-8                   █  │"
"│ no task definitions     ││    exit code    0                              █  │"
"│                         ││    cost         $0.42                          █  │"
"│                         ││    tokens       199k in / 22k out              █  │"
"╰─────────────────────────╯│    turns        37                             █  │"
"╭🌲 WORKTREES─ [r] [g] [x]╮│                                                █  │" Hidden by multi-width symbols: [(2, " ")]
"│                         ││  Config                                        █  │"
"│ 🔍 [/]filter            ││    description  Squash-merge the branch.       █  │" Hidden by multi-width symbols: [(3, " ")]
"│   Name                  ││    worktree     auto                           █  │"
"│ ● feature               ││    dedup        none                           █  │"
"│ ● hotfix                ││    timeout      30m                            █  │"
"│ ● feature               ││    priority     normal                         ▼  │"
"╰─────────────────────────╯╰───────────────────────────────────────────────────╯"
"[1-9/0 · ctrl+s n/p]tab · [ctrl+x/z]sub-tab · [?]help · [q]uit                  "
