crates/qoo-tui/src/view/detail/snapshots/qoo_tui__view__detail__tests__detail_run_info_queued_no_meta.snap
---
source: crates/qoo-tui/src/view/detail/tests.rs
expression: terminal.backend()
---
" 1:acme (1)                                      ● running 0/3  ↯ claude  ↯ grok"
"╭📋 QUEUE─ [r] [x] [g] [a]╮╭📄 DETAIL──────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (29, " ")]
"│                         ││ 1:report  2:transcript  3:prompt  4:info          │"
"│ 🔍 [/]filter            ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│     Worktr…  Prompt/Ar… ││  Run                                              │"
"│ ○   feature  topic=wid… ││    id          01RUN                              │"
"│                         ││    definition  fix-ci-conflicts                   │"
"│                         ││    status      queued                             │"
"│                         ││    args        topic=widget-cache                 │"
"│                         ││                                                   │"
"│                         ││  Timing                                           │"
"│                         ││    created     07/09 07:00 (5m ago)               │"
"│                         ││    started     —                                  │"
"│                         ││    finished    —                                  │"
"╰─────────────────────────╯│    duration    —                                  │"
"╭⚡TASKS [r] [d] [c] · [z]╮│                                                   │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter            ││  Details                                          │" Hidden by multi-width symbols: [(3, " ")]
"│ no task definitions     ││    worktree    acme.feature                       │"
"│                         ││    session     —                                  │"
"│                         ││    model       claude-opus-4.8 (claude) · claude  │"
"╰─────────────────────────╯│                -opus-4-8                          │"
"╭🌲 WORKTREES─ [r] [g] [x]╮│    exit code   —                                  │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter            ││    cost        —                                  │" Hidden by multi-width symbols: [(3, " ")]
"│ 1 feature               ││    tokens      —                                  │"
"│ ● hotfix                ││    turns       —                                  │"
"│ ● feature               ││                                                   │"
"╰─────────────────────────╯╰───────────────────────────────────────────────────╯"
"[1-9/0 · ctrl+s n/p]tab · [ctrl+x/z]sub-tab · [?]help · [q]uit                  "
