crates/qoo-tui/src/view/detail/snapshots/qoo_tui__view__detail__tests__detail_run_report_stats.snap
---
source: crates/qoo-tui/src/view/detail/tests.rs
expression: terminal.backend()
---
" 1:acme                                          ● running 0/3  ↯ claude  ↯ grok"
"╭📋 QUEUE─ [r] [x] [g] [a]╮╭📄 DETAIL──────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (29, " ")]
"│                         ││ 1:report  2:transcript  3:prompt  4:info          │"
"│ 🔍 [/]filter            ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│    Worktr…  Prompt/Args ││  Result                                           │"
"│ $  feature  topic=widg… ││                                                   │"
"│                         ││  You've hit your session limit · resets 1pm       │"
"│                         ││  (America/Chicago)                                │"
"│                         ││                                                   │"
"│                         ││  Stats                                            │"
"│                         ││  outcome   failed (exit code 1)                   │"
"│                         ││  model     claude-fable-5                         │"
"╰─────────────────────────╯│  cost      $31.07151099999998                     │"
"╭⚡TASKS [r] [d] [c] · [z]╮│  turns     40                                     │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter            ││  duration  18m                                    │" Hidden by multi-width symbols: [(3, " ")]
"│ no task definitions     ││                                                   │"
"│                         ││                                                   │"
"╰─────────────────────────╯│                                                   │"
"╭🌲 WORKTREES─ [r] [g] [x]╮│                                                   │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter            ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│ ● feature               ││                                                   │"
"│ ● hotfix                ││                                                   │"
"╰─────────────────────────╯╰───────────────────────────────────────────────────╯"
"[1-9/0 · ctrl+s n/p]tab · [ctrl+x/z]sub-tab · [?]help · [q]uit                  "
