crates/qoo-tui/src/view/detail/snapshots/qoo_tui__view__detail__tests__detail_transcript.snap
---
source: crates/qoo-tui/src/view/detail/tests.rs
expression: terminal.backend()
---
" 1:acme (2)                                      ● running 1/3  ↯ claude  ↯ grok"
"╭📋 QUEUE─ [r] [x] [g] [a]╮╭📄 DETAIL──────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (29, " ")]
"│                         ││ 1:report  2:transcript  3:prompt  4:info          │"
"│ 🔍 [/]filter            ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│     Worktr…  Prompt/Ar… ││  line 22                                       ▲  │"
"│ ⠯   feature  topic=wid… ││  line 23                                       ║  │"
"│ ○   feature  topic=doc… ││  line 24                                       ║  │"
"│ ──────── finished ───── ││  line 25                                       ║  │"
"│ ✗   main                ││  line 26                                       ║  │"
"│ ●   main                ││  line 27                                       ║  │"
"│                         ││  line 28                                       ║  │"
"│                         ││  line 29                                       ║  │"
"╰─────────────────────────╯│  line 30                                       ║  │"
"╭⚡TASKS [r] [d] [c] · [z]╮│  line 31                                       ║  │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter            ││  line 32                                       █  │" Hidden by multi-width symbols: [(3, " ")]
"│ no task definitions     ││  line 33                                       █  │"
"│                         ││  line 34                                       █  │"
"╰─────────────────────────╯│  line 35                                       █  │"
"╭🌲 WORKTREES─ [r] [g] [x]╮│  line 36                                       █  │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter            ││  line 37                                       █  │" Hidden by multi-width symbols: [(3, " ")]
"│ 2 feature               ││  line 38                                       █  │"
"│ ● hotfix                ││  line 39                                       ▼  │"
"╰─────────────────────────╯╰───────────────────────────────────────────────────╯"
"[1-9/0 · ctrl+s n/p]tab · [ctrl+x/z]sub-tab · [?]help · [q]uit                  "
