crates/qoo-tui/src/view/detail/snapshots/qoo_tui__view__detail__tests__detail_transcript_fenced.snap
---
source: crates/qoo-tui/src/view/detail.rs
expression: terminal.backend()
---
" 1:acme (2)                                      ● running 1/3  ↯ claude  ↯ grok"
"╭📋 QUEUE─ [r] [x] [g] [a]╮╭📄 DETAIL──────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (29, " ")]
"│                         ││ 1:report  2:transcript  3:prompt  4:info          │"
"│ 🔍 [/]filter            ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│    Worktr…  Prompt/Args ││  Build steps:                                     │"
"│ ⠯  feature  implement … ││  ──────── bash ─────────────────────────────────  │"
"│ ○  feature  write docs… ││  cd ~/proj && make build                          │"
"│ ──────── finished ───── ││  cat log.txt | grep error                         │"
"│ ✗  main     flaky migr… ││  ───────────────────────────────────────────────  │"
"│ ●  main     earlier cl… ││  Config:                                          │"
"│                         ││  ──────── json ─────────────────────────────────  │"
"│                         ││  {"name": "qoo", "count": 3, "ok": true}          │"
"╰─────────────────────────╯│  ───────────────────────────────────────────────  │"
"╭⚡TASKS [r] [d] [c] · [z]╮│  done                                             │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter            ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│ no task definitions     ││                                                   │"
"│                         ││                                                   │"
"╰─────────────────────────╯│                                                   │"
"╭🌲 WORKTREES─ [r] [g] [x]╮│                                                   │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter            ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│ 2 feature               ││                                                   │"
"│ ● hotfix                ││                                                   │"
"╰─────────────────────────╯╰───────────────────────────────────────────────────╯"
"[1-9/0 · ctrl+s n/p]tab · [ctrl+x/z]sub-tab · [?]help · [q]uit                  "
