crates/qoo-tui/src/view/detail/snapshots/qoo_tui__view__detail__tests__detail_transcript_wrapped_url.snap
---
source: crates/qoo-tui/src/view/detail/tests.rs
expression: terminal.backend()
---
" 1:acme (2)                                      ● running 1/3  ↯ claude  ↯ grok"
"╭📋 QUEUE─ [r] [x] [g] [a]╮╭📄 DETAIL──────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (29, " ")]
"│                         ││ 1:report  2:transcript  3:prompt  4:info          │"
"│ 🔍 [/]filter            ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│     Worktr…  Prompt/Ar… ││  line 9                                        ▲  │"
"│ ⠯   feature  topic=wid… ││  line 10                                       ║  │"
"│ ○   feature  topic=doc… ││  line 11                                       ║  │"
"│ ──────── finished ───── ││  line 12                                       ║  │"
"│ ✗   main                ││  line 13                                       ║  │"
"│ ●   main                ││  line 14                                       ║  │"
"│                         ││  line 15                                       █  │"
"│                         ││  line 16                                       █  │"
"╰─────────────────────────╯│  line 17                                       █  │"
"╭⚡TASKS [r] [d] [c] · [z]╮│  line 18                                       █  │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter            ││  line 19                                       █  │" Hidden by multi-width symbols: [(3, " ")]
"│ no task definitions     ││  line 20                                       █  │"
"│                         ││  line 21                                       █  │"
"╰─────────────────────────╯│  line 22                                       █  │"
"╭🌲 WORKTREES─ [r] [g] [x]╮│  line 23                                       █  │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter            ││  See                                           █  │" Hidden by multi-width symbols: [(3, " ")]
"│ 2 feature               ││  https://github.com/acme/monorepo/pull/1234/fi █  │"
"│ ● hotfix                ││  les#diff-0a1b2c3d4e5f done                    ▼  │"
"╰─────────────────────────╯╰───────────────────────────────────────────────────╯"
"[1-9/0 · ctrl+s n/p]tab · [ctrl+x/z]sub-tab · [?]help · [q]uit                  "
