crates/qoo-tui/src/view/detail/snapshots/qoo_tui__view__detail__tests__detail_worktree_info.snap
---
source: crates/qoo-tui/src/view/detail/tests.rs
expression: terminal.backend()
---
" 1:acme (2)                                      ● running 1/3  ↯ claude  ↯ grok"
"╭📋 QUEUE─ [r] [x] [g] [a]╮╭📄 DETAIL──────────────────────────────────────────╮" Hidden by multi-width symbols: [(2, " "), (29, " ")]
"│                         ││ 1:info                                            │"
"│ 🔍 [/]filter            ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│    Worktr…  Prompt/Args ││  path     /repos/acme.feature                     │"
"│ ⠯  feature  topic=widg… ││  branch   feature/TICK-1200-cache                 │"
"│ ○  feature  topic=docs… ││  commit   a1b2c3d                                 │"
"│ ──────── finished ───── ││  author   Alice Example                           │"
"│ ✗  main                 ││  updated  3d ago (07/06 07:05)                    │"
"│ ●  main                 ││  pr       #42                                     │"
"│                         ││                                                   │"
"│                         ││    Task        Created      Age       Live        │"
"╰─────────────────────────╯│  ▶ squash-me…  07/09 07:00  just now  ⏱ 0s        │"
"╭⚡TASKS [r] [d] [c] · [z]╮│  ○ write doc…  07/09 07:04  just now  #1 in lane  │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter            ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│ no task definitions     ││                                                   │"
"│                         ││                                                   │"
"╰─────────────────────────╯│                                                   │"
"╭🌲 WORKTREES─ [r] [g] [x]╮│                                                   │" Hidden by multi-width symbols: [(2, " ")]
"│ 🔍 [/]filter            ││                                                   │" Hidden by multi-width symbols: [(3, " ")]
"│ 2 feature               ││                                                   │"
"│ ● hotfix                ││                                                   │"
"╰─────────────────────────╯╰───────────────────────────────────────────────────╯"
"[1-9/0 · ctrl+s n/p]tab · [ctrl+x/z]sub-tab · [?]help · [q]uit                  "
